--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 1rem;
   text-transform: uppercase;
   font-size: 4rem;
+  border-left: 6px solid blue;
 }
 
 .heading-2 {
@@ -12,4 +13,5 @@
   padding: 1rem;
   text-transform: uppercase;
   font-size: 2.5rem;
+  border-left: 6px solid red;
 }
